[package]
name = "project_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#cargo update
[dependencies]
actix-web = "4.2.1"
actix-rt= "2.7.0"
chrono={version="0.4",features=["serde"]}
dotenv = "0.15.0"
diesel={vesion="1.4",features=["postgres","r2d2","uuid","chrono"]}
diesel_migrations = "2.0.0"
env_logger = "0.9.1"
lazy_static = "1.4"
listenfd= "1.0.0"
log="0.4"
serde="1.0"
serde_json="1.0"
r2d2="0.8"
uuid={version= "1.1.2",features=["serde","v4"]}
futures = "0.3"